<resources>
    <string name="app_name">SchoolSystem</string>
    <string name="title_activity_l">L</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_student_icon">Add Student Icon</string>
    <string name="add_new_student">Add New Student</string>
    <string name="account_information">Account Information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="personal_information">Personal Information</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="parent_contact">Parent Contact</string>
    <string name="academic_information">Academic Information</string>
    <string name="grade_level">Grade Level</string>

    <string name="select_teacher">Select Teacher</string>
    <string name="select_class">Select Class</string>
    <string name="select_day">Select Day</string>
    <string name="select_course">Select Course</string>

</resources>